@@ -9,6 +9,8 @@ TODO:
 
 2017.9.17	K.L.	<k.l.lambda@gmail.com>
 
+	>	FingeringNavigatorViewer: refined styles.
+
 	>	Pianist/FingeringNavigator: optimized current node searching.
 
 	+	FingeringNavigatorViewer: added keyboard shortcuts.
